<resources>
    <string name="app_name">Rusantara</string>

    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="register" translatable="false">Let\'s start with Register</string>
    <string name="username">Username</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="ButtonRegister">Register</string>
    <string name="email">Email</string>
    <string name="error_email">Enter email</string>
    <string name="error_username">Enter username</string>
    <string name="error_password">Enter password</string>
    <string name="login">Let\'s Start With Login!</string>
    <string name="ButtonLogin">LOGIN</string>
    <string name="NoAcc">Don\'t have an account? Register</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="upload">Upload</string>
    <string name="preview_image">Preview Image</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="food_name">Food Name</string>
    <string name="food_origin">Origin of Food</string>
    <string name="info">Kue putu or putu bambu is an Indonesian kue. It is made of rice flour called suji and coloured green with pandan leaves, filled with palm sugar, steamed in bamboo tubes, and served with desiccated coconut. contoh ae</string>
    <string name="location">Location</string>
    <string name="specific_location">Jawa, Indonesia</string>
    <string name="ingredients">Info Ingredients</string>
    <string name="food_info">Info</string>
    <string name="food_ingredients">Ingredients</string>
    <string name="food_nutrition">Nutrition</string>
    <string name="logout">Logout</string>
    <string name="rusantara">Rusantara</string>
    <string name="take_photo">Take Photo</string>
    <string name="back_to_menu">back to menu</string>
    <string name="food_image">food image</string>
    <string name="menu_description">take a photo, upload, and the info will come out</string>
    <string name="splash_screen">splash screen</string>
    <string name="capture_image">capture image</string>
    <string name="switch_camera">switch camera</string>
    <string name="item_not_found">Item not found</string>
</resources>