<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_60"
    tools:context=".activity.main.ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/prof_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prof_username_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:text="Thomas07"
        app:layout_constraintStart_toStartOf="@+id/prof_username"
        app:layout_constraintTop_toBottomOf="@+id/prof_username" />

    <TextView
        android:id="@+id/prof_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/email"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/prof_username_value"
        app:layout_constraintTop_toBottomOf="@id/prof_username_value" />

    <TextView
        android:id="@+id/prof_email_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="normal"
        tools:text="Thomas07@gmail.com"
        app:layout_constraintStart_toStartOf="@+id/prof_email"
        app:layout_constraintTop_toBottomOf="@+id/prof_email" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="28dp"
        android:backgroundTint="@color/color_10"
        android:text="@string/logout"
        android:textSize="12sp"
        app:cornerRadius="6dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_email_value" />
</androidx.constraintlayout.widget.ConstraintLayout>